tests/labby/missing_labels.stderr
error: Missing `|` separator after labels in `twist! -labby` macro invocation. Add labels, or use `twist!` without `-labby`.
 --> $DIR/missing_labels.rs:4:2
  |
4 |     twist! { -labby JUST_BREAK }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
