tests/labby/missing_labels.rs
use tear::twist;

fn missing_labels() {
	twist! { -labby JUST_BREAK }
}

fn main () {}